# crawfish

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: api.rs  engine.rs  main.rs  uci.rs
