[package]
name = "crawfish"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Ludi-1/chrust/"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
vampirc-uci = "0.11"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.26"
tokio-util = { version = "0.6.2", features = ["io"] }
tokio-stream = { version = "0.1.2", features = ["io-util"] }